--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,20 +10,20 @@
 <body class="pt-5">
 
 <div class="col-4 mx-auto">
+
     <main>
         <form class="form-horizontal" role="form" method="POST" action="/process_login">
             <h1 class="h3 mb-3 fw-bold text-left">Please sign in</h1>
 
             <div class="form-floating">
-                <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com" style="height: 40px">
+                <label for="floatingInput" class="text-muted d-flex align-items-center">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" class="form-control d-flex align-items-center" name="password" id="floatingPassword" placeholder="Password" style="height: 40px">
+                <label for="floatingPassword" class="text-muted d-flex align-items-center">Password</label>
             </div>
-
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary mt-2" type="submit">Sign in</button>
             <div th:if="${param.error}" style="color: red">
                 Incorrect Email or Password
             </div>
