--- a/src/main/resources/templates/all_users.html
+++ b/src/main/resources/templates/all_users.html
@@ -12,17 +12,17 @@
 
 <!--Navbar-->
 <header>
-    <nav class="navbar navbar-dark bg-dark p-0 shadow">
-        <div class="nav-item text-left text-white ml-3">
-            <span class="font-weight-bold" th:text="${currentUser.getEmail()}"></span>
+    <nav class="navbar navbar-dark bg-dark p-0 shadow ">
+        <div class="nav-item text-white px-3">
+            <span class="fw-bold" th:text="${currentUser.getEmail()}"></span>
             <span>with roles:</span>
             <span th:each="authorities : ${currentUser.getAuthorities()}"
                   th:text="${#strings.substring(authorities.getAuthority(), 5)} + ' '">
             </span>
         </div>
-        <ul class="navbar-nav mr-3">
+        <ul class="navbar-nav">
             <li class="nav-item text-nowrap">
-                <a class="nav-link" href="/logout">Logout</a>
+                <a class="nav-link px-3" href="/logout">Logout</a>
             </li>
         </ul>
     </nav>
@@ -32,7 +32,7 @@
 
     <!--Sidebar-->
     <div class="row">
-        <div class="col-md-2 px-0 ">
+        <div class="col-md-2 px-0">
             <div class="d-flex flex-column flex-shrink-0 p-0 text-white">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
@@ -73,7 +73,7 @@
                             <div class="tab-content">
                                 <div id="users-table" class="tab-pane fade show active">
                                     <div class="card">
-                                        <div class="container-fluid px-0 bg-light border">
+                                        <div class="container-fluid px-0 bg-light border t">
                                             <h5 class="card-header">
                                                 All users</h5>
                                         </div>
@@ -326,6 +326,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </html>
